--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: "记录点滴"
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/Gnonymous/Gnonymous.github.io/blob/master/images/IMG_0546.jpeg?raw=true
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon: https://github.com/lemonchann/lemonchann.github.io/raw/master/images/favicon.ico
+favicon: https://raw.githubusercontent.com/Gnonymous/Gnonymous.github.io/master/images/202403201118220.ico
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
 # and URL Link(e.g. 'Theme' tab below) tabs. If you don't need one, just delete
