--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: "记录点滴"
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/IMG_0546.jpeg?raw=true
+avatar: https://gitee.com/Gnonymous/img/blob/master/img/IMG_0546.jpeg
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
 favicon: /images/202403201118220.ico
 
